[ST] Use ThreadLocal in ResourceManager (#9687)
Signed-off-by: David Kornel <kornys@outlook.com>